--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,20 +1,34 @@
 .hidden {
-  display: none !important;
+    display: none !important;
 }
 
 mark {
-  background-color: #fde68a; /* yellow-200 */
-  padding: 0 2px;
-  border-radius: 4px;
+    background-color: #fde68a; /* yellow-200 */
+    padding: 0 2px;
+    border-radius: 4px;
 }
 
 /* iOS select fix */
 select {
-  -webkit-appearance: none;
-  appearance: none;
-  background-image: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-image: none;
+}
+
+#btnTop {
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(1px);
+    -webkit-backdrop-filter: blur(1px);
+    border: 2px solid rgba(255, 255, 255, 1);
 }
 
 @media (max-width: 768px) {
-  input, select, textarea { font-size: 16px; }
+    input,
+    select,
+    textarea {
+        font-size: 16px;
+    }
 }
